--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -1,6 +1,11 @@
 ul li {
     list-style: none;
+    outline: 1px solid black;
 }
 a:hover {
     cursor: pointer;
+}
+
+.pos-center {
+    text-align: center;
 }
