Added in styling for the sliders

--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -3,6 +3,28 @@ ul li {
     outline: 1px solid black;
 }
 
+.slider {
+    margin: 5% 0 5% 0;
+    height: 25vh;
+    display: inline-block;
+    text-align: center;
+}
+
+.sliderTitle {
+    padding-bottom: 5vh;
+    font-weight: bold;
+}
+
+.sliderRange {
+    transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+}
+
+.visualiser {
+    display: inline-block;
+    padding: 10px;
+}
+
 a:hover {
     cursor: pointer;
 }
