--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -6,6 +6,13 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+span:hover {
+    cursor: pointer;
+}
+
+.projname:hover {
+    cursor: pointer;
+}
 
 /* For the stack controller */
 
