--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -55,6 +55,7 @@ a:hover {
 
 .trackContainer {
     padding-top: 1%;
+    padding-bottom: 1%;
     border-style: solid;
     /* Temporarily setting border for tracks */
     border-color: rgba(255, 0 ,0, 0.5);
@@ -64,3 +65,39 @@ a:hover {
     margin-left: 0.125%;
     margin-right: 0.125%;
 }
+
+.btn-margin {
+    margin-right: 3px;
+}
+
+.btn-save {
+    background-color: #800080;
+    border-color: #800080;
+}
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
+}
+.btn-circle.btn-lg {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+}
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
+}
+  
